css/cv.css
.cv-section,
.study-section {
  line-height: var(--font-line-height-cv);
  color: #333;
}

.cv-section {
  margin-top: 40px;
}

.cv-section h1,
.study-section h1,
.certificates-section h1 {
  font-size: var(--font-size-cv-h1);
  font-weight: 700;
  color: #2c3e50;
  margin-bottom: 1rem;
  text-align: left;
}

.cv-card {
  margin-bottom: 1.5rem;
}

.cv-card h2,
.project-card h2,
.study-section h2 {
  font-size: var(--font-size-cv-h2);
  font-weight: 600;
  color: #2c3e50;
  margin-bottom: 0.5rem;
  text-align: left;
}

.cv-card h3 {
  font-size: var(--font-size-cv-h3);
  font-weight: 500;
  color: rgb(3, 74, 166);
  margin-bottom: 0.3rem;
  text-align: left;
}

.cv-card h4 {
  font-size: var(--font-size-cv-h4);
  font-weight: 400;
  color: #7f8c8d;
  margin-bottom: 1rem;
  text-align: left;
  font-style: italic;
}

.cv-card p,
.project-card p,
.study-section p {
  font-size: var(--font-size-cv-p);
  color: #555;
  margin-bottom: 0;
  text-align: left;
}

.cv-divider {
  width: 80%;
  height: 2px;
  background: linear-gradient(
    135deg,
    rgb(3, 74, 166) 0%,
    rgb(132, 159, 245) 20%,
    rgb(212, 224, 255) 70%,
    rgb(245, 248, 255) 100%
  );
  margin: 2rem auto;
  border-radius: 1px;
  opacity: 0.4;
}

.project-card {
  margin-bottom: 1.5rem;
}

.project-card h2 {
  margin-bottom: 1rem;
  text-align: left;
}

.project-card p {
  margin-bottom: 0.5rem;
}

.study-section {
  margin-bottom: 1.5rem;
}

.study-section h2 {
  margin-bottom: 1rem;
}

.study-section p {
  margin-bottom: 0.5rem;
}

.certificates-section {
  margin-bottom: 40px;
}

.certificate-card {
  display: grid;
  grid-template-columns: 1fr 2fr;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
  border-radius: 4px;
  padding: 40px;
  align-items: center;
  margin-top: 40px;
  margin-bottom: 20px;
  font-size: var(--font-size-cv-p);
  text-align: center;
}

.certificate-card img {
  border-radius: 8px;
}

@media (max-width: 480px) {
  :root {
    --font-line-height-cv: 28px;
    --font-size-cv-h1: 1rem;
    --font-size-cv-h2: 1.2rem;
    --font-size-cv-h3: 1rem;
    --font-size-cv-h4: 0.9rem;
    --font-size-cv-p: 0.9rem;
  }
}

@media (min-width: 481px) and (max-width: 639px) {
  :root {
    --font-line-height-cv: 32px;
    --font-size-cv-h1: 1.3rem;
    --font-size-cv-h2: 1.5rem;
    --font-size-cv-h3: 1.2rem;
    --font-size-cv-h4: 1rem;
    --font-size-cv-p: 1rem;
  }
}

@media (min-width: 640px) and (max-width: 767px) {
  :root {
    --font-line-height-cv: 32px;
    --font-size-cv-h1: 1.4rem;
    --font-size-cv-h2: 1.6rem;
    --font-size-cv-h3: 1.3rem;
    --font-size-cv-h4: 1.1rem;
    --font-size-cv-p: 1.1rem;
  }
}

@media (min-width: 768px) and (max-width: 1023px) {
  :root {
    --font-line-height-cv: 34px;
    --font-size-cv-h1: 1.4rem;
    --font-size-cv-h2: 1.7rem;
    --font-size-cv-h3: 1.4rem;
    --font-size-cv-h4: 1.2rem;
    --font-size-cv-p: 1.2rem;
  }
  .cv-card p,
  .project-card p,
  .study-section p {
    padding-right: 60px;
  }
}

@media (min-width: 1024px) {
  :root {
    --font-line-height-cv: 36px;
    --font-size-cv-h1: 1.5rem;
    --font-size-cv-h2: 1.8rem;
    --font-size-cv-h3: 1.5rem;
    --font-size-cv-h4: 1.3rem;
    --font-size-cv-p: 1.3rem;
  }
  .cv-section {
    display: flex;
    flex-direction: column;
    padding-left: 60px;
    padding-right: 60px;
  }
  .cv-card p {
    text-align: center;
    width: 50%;
    margin: 0 auto;
  }
  .project-card p {
    text-align: center;
    width: 70%;
    margin: 0 auto;
  }
  .study-section p {
    width: 70%;
    margin-left: 0;
    margin-right: auto;
    text-align: left;
  }
  .cv-section h1,
  .cv-section h2,
  .cv-section h3,
  .cv-section h4,
  .cv-section p {
    text-align: center;
  }
  .study-certificates-section {
    display: flex;
    flex-direction: row;
    padding-left: 60px;
    padding-right: 60px;
  }
  .study-certificates-section {
    .divider {
      display: none;
    }
  }
  .study-section {
    width: 50%;
    margin-right: 20px;
  }
  .certificates-section {
    width: 50%;
    margin-left: 20px;
  }

  .certificate-card {
    display: grid;
    grid-template-columns: 2fr 1fr;
  }
  .certificate-card p {
    grid-column: 1;
    grid-row: 1;
  }
  .certificate-card a {
    grid-column: 2;
    grid-row: 1;
  }
}

